# ib-flex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EDGE_CASES_SUMMARY.md  FLEX_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  PLAN.md  README.md  TYPES_ANALYSIS.md  analysis_output.txt  field_analysis_summary.txt  phase3_decision.md  progress.txt
.github/workflows/: release.yml
benches/: parsing_benchmarks.rs
examples/: api_simple_usage.rs  api_with_retry.rs  backfill_summary.rs  calculate_commissions.rs  comprehensive_daily_analysis.rs  debug_backfill.rs  debug_full.rs  debug_minimal.rs  fetch_flex_statement.rs  filter_trades.rs  fund_daily_summary.rs  historical_backfill.rs  parse_activity_statement.rs  parse_trade_confirmation.rs  tax_analysis.rs  test_parse.rs  wash_sales_check.rs
scripts/: analyze_field_presence.py  ralph.sh  release.sh
src/: error.rs  lib.rs  version.rs
src/api/: client.rs  mod.rs
src/parsers/: activity.rs  mod.rs  trade_confirmation.rs  xml_utils.rs
src/types/: activity.rs  common.rs  extended.rs  mod.rs  trade_confirmation.rs
tests/: api_client_tests.rs  daily_portfolio_tests.rs  extended_types_tests.rs  integration_tests.rs  reliability_tests.rs
tests/fixtures/: activity_daily_portfolio.xml  activity_extended.xml
